# xfc_btms_saev_controller

./: .gitignore  LICENSE.txt  README.html  README.md  README_woformulas.md  explanation data files.md  importTestData.ipynb  importTestData.py  main.ipynb  main_limCon.ipynb  main_test.ipynb  main_test.py  mpcBase.html  mpcBase.md  profile.prof  pyproject.toml  requirements.txt  site_power_controller_federate.py  speedControlWrapper.py  test.py  todo.md  visualizeInputData.ipynb
components/: ChaDepLimCon.py  ChaDepMpcBase.py  ChaDepParent.py  DermsDummy.py  PhySimDummy.py  ResultWriter.py  SimBroker.py  Vehicle.py  VehicleGenerator.py  __init__.py  chargingCapFromString.py  chargingStation.py  loggerConfig.py  requirements.txt  solverAlgorithm.py
components/GeminiWrapper/: ControlWrapper.py  ControlWrapperDummy.py  ControlWrapperLimCon.py  SimBrokerDummy.py  VehicleGeneratorBeam.py  __init__.py
examples/: vehicleChargingTrajectoryExample.ipynb
informations/: beam output file.md
integration/: site_power_controller_federate.py
playground/: generalPlayground.ipynb  pandas_playground.ipynb  test1
results/: sim1-ChargingStationProperties.csv  sim1-ChargingStationState.csv  sim1-Events.csv  sim1-VehicleStates.csv  sim1ChargingStationProperties.csv  sim1ChargingStationState.csv
results/sim1/: ChargingStationProperties.csv  ChargingStationState.csv  Events.csv  VehicleStates.csv
simulationScripts/: createChargingStations.py
simulationScripts/advancedScenario/: config.py  data_preparation_and_analysis.ipynb  statistics_refuelSessionEvents.tex  step0_data_preparation_and_analysis.ipynb  step1_predictions.py  step2_kmeans.ipynb  step2_kmeans_tslearn.ipynb  step3_btms_sizing.py  step3_btms_sizing_result_analysis.ipynb  step4_btms_sizing_sensitivity.py  step4_btms_sizing_sensitivity_analysis.ipynb  step6_MPC_simulation.py  (+13 more)
test_data/: importTestData.ipynb  importTestData.py  visualizeInputData.ipynb
(+25542 files in other folders)
