[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfcController"
version = "0.9.01"
authors = [
  { name="Julius Aka", email="author@example.com" },
]
description = "A controller for an extreme-fast-charging (XFC) depot with behind-the-meter storage (BTMS) for shared autonomous electric vehicle (SAEV) fleets in the project GEMINI-XFC with the transportation simulation software BEAM"
readme = "README.md"
requires-python = ">=3.7.12"
dependencies = ["cvxpy>=1.2.0",
"numpy>=1.20.1",
"pandas>=1.2.4"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juliusaka/xfc_btms_saev_controller"
"Bug Tracker" = "https://github.com/juliusaka/xfc_btms_saev_controller/issues"

[tool.hatch.build.targets.wheel]
only-include = ["components"]

[tool.hatch.build.targets.wheel.sources]
"components" = "components/"